helm/network.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: api-route
  namespace: default
spec:
  gateways:
  - api-gateway
  hosts:
  - sample-api.com
  http:
  - route:
    - destination:
        host: k-api-service
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: api-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "sample-api.com"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflared-egress
  namespace: cloudflare
spec:
  podSelector:
    matchLabels:
      app: cloudflared
  policyTypes: [Egress]
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
